--- a/waTracking.Web/appsettings.json
+++ b/waTracking.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Conexion": "Data Source=virtualServer19\\SQLEXPRESS;User Id=nicoblasco;Password=PunkRock0001;Initial Catalog=GEOLOCAL;Integrated Security=False"
+    "Conexion": "Data Source=TOSHIBA\\MSSQLSERVER2017;Initial Catalog=GEOLOCAL;Integrated Security=True"
+    //    "Conexion": "Data Source=virtualServer19\\SQLEXPRESS;User Id=nicoblasco;Password=PunkRock0001;Initial Catalog=GEOLOCAL;Integrated Security=False"
   },
   "Logging": {
     "LogLevel": {
