--- a/waTracking.Web/appsettings.json
+++ b/waTracking.Web/appsettings.json
@@ -8,6 +8,7 @@
       "Default": "Warning"
     }
   },
+  "AvatarFiles": "C:\\Users\\nicoblasco\\Documents\\Sistemas\\En Desarrollo\\Repositorios Git\\waTracking.Web\\Files\\Avatar",
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "Clave personalizada",
