--- a/waTracking.Web/appsettings.json
+++ b/waTracking.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Conexion": "Data Source=TOSHIBA\\MSSQLSERVER2017;Initial Catalog=GEOLOCAL;Integrated Security=True"
+    "Conexion": "Data Source=DESKTOP-4QE2QT2\\SQLEXPRESS01;Initial Catalog=GEOLOCAL;Integrated Security=True"
     //    "Conexion": "Data Source=virtualServer19\\SQLEXPRESS;User Id=nicoblasco;Password=PunkRock0001;Initial Catalog=GEOLOCAL;Integrated Security=False"
   },
   "Logging": {
@@ -8,7 +8,7 @@
       "Default": "Warning"
     }
   },
-  "AvatarFiles": "C:\\Users\\nicoblasco\\Documents\\Sistemas\\En Desarrollo\\Repositorios Git\\waTracking.Web\\Files\\Avatar",
+  "AvatarFiles": "D:\\Sistemas\\En Desarrollo\\Repositorios Git\\waTracking.Web\\Files\\Avatar",
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "Clave personalizada",
