--- a/waTracking.Web/waTracking.Web.csproj
+++ b/waTracking.Web/waTracking.Web.csproj
@@ -19,4 +19,6 @@
     <ProjectReference Include="..\waTracking.Entities\waTracking.Entities.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
